test: add comprehensive test coverage across all SearchEngine modules
Agent-Logs-Url: https://github.com/iPriyadarshi/SearchEngine/sessions/f14e477e-5e6b-4b35-a84e-f40df35b01ef

Co-authored-by: iPriyadarshi <75021190+iPriyadarshi@users.noreply.github.com>